--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "npm-contributor-count",
+  "name": "contributor-count",
   "version": "1.0.0",
   "description": "Count the number of people with write access to a package",
-  "main": "index.js",
+  "main": "src/lib/count.js",
+  "bin": {
+    "contributor-count": "src/bin/cmd.js"
+  },
   "dependencies": {
     "axios": "^0.12.0",
     "bluebird": "^3.4.1",
     "lodash": "^4.13.1",
+    "ora": "^1.1.0",
     "promise-throttle": "^0.2.0",
     "semver": "^5.3.0"
   },
